--- a/requirements_versions.txt
+++ b/requirements_versions.txt
@@ -5,7 +5,7 @@ safetensors==0.4.3
 accelerate==0.32.1
 pyyaml==6.0.1
 pillow==10.4.0
-scipy==1.14.0
+scipy==1.13.0
 tqdm==4.66.4
 psutil==6.0.0
 pytorch_lightning==2.3.3
@@ -22,3 +22,4 @@ packaging==24.1
 rembg==2.0.57
 groundingdino-py==0.4.0
 segment_anything==1.0
+websockets>=13.0,<15.0dev
